--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,12 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
+
+# These lints may be important signals about code quality, but normal Bevy code
+# commonly triggers them and the CI workflow treats them as errors, so we've
+# chosen to allow them in this template.
+#
+# Feel free to delete the following lines.
+[lints.clippy]
+too_many_arguments = "allow"
+type_complexity = "allow"
