--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 assets/Tilesheet/monochrome-transparent.png filter=lfs diff=lfs merge=lfs -text
+assets/bevy_icon.png filter=lfs diff=lfs merge=lfs -text
